--- a/docker/all-in-one/nginx/nginx.conf
+++ b/docker/all-in-one/nginx/nginx.conf
@@ -2,8 +2,8 @@ events {}
 
 http {
    server {
-       listen ${PORT};
-       listen [::]:${PORT};
+       listen 80;
+       listen [::]:80;
        server_name _;
 
        root /app/backend/public;
