--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,7 +70,8 @@
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
     "recharts": "2",
-    "sirv": "^2.0.4"
+    "sirv": "^2.0.4",
+    "crypto-js":"^4.2.0"
   },
   "devDependencies": {
     "@lingui/vite-plugin": "^4.14.1",
