--- a/backend/composer.json
+++ b/backend/composer.json
@@ -13,6 +13,7 @@
         "doctrine/dbal": "^3.6",
         "ezyang/htmlpurifier": "^4.17",
         "guzzlehttp/guzzle": "^7.2",
+        "lab404/laravel-impersonate": "^1.7",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
