--- a/.github/workflows/build_beckend.yml
+++ b/.github/workflows/build_beckend.yml
@@ -1,4 +1,4 @@
-name: "Build"
+name: "Build beckend"
 
 on:
   push:
@@ -29,7 +29,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-server
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-beckend
 
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
