Rename workflow to 'Build frontend' and update Dockerfile path

--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -1,4 +1,4 @@
-name: "Build"
+name: "Build frontend"
 
 on:
   push:
@@ -35,6 +35,7 @@ jobs:
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: ./frontend
+          file: ./frontend/Dockerfile.ssr
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
