--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@stripe/stripe-js": "^1.54.1",
     "@tabler/icons-react": "^2.44.0",
     "@tanstack/react-query": "5.76.1",
+    "@tanstack/react-table": "^8.21.3",
     "@tiptap/core": "^2.7.0",
     "@tiptap/extension-color": "^2.11.7",
     "@tiptap/extension-image": "^2.11.5",
