Fix: Improve Docker Compose configuration and security
This commit addresses several Docker best practices violations and
configuration issues in the all-in-one Docker setup.

Changes:
- Pin image versions (redis:7-alpine, postgres:16-alpine)
- Remove explicit container names to prevent conflicts
- Remove unnecessary Redis port exposure
- Add restart policies for all services
- Replace tracked .env with .env.example
- Move database credentials to environment variables
- Add missing env variables (APP_EMAIL_LOGO_URL, APP_EMAIL_LOGO_LINK_URL)
- Simplify network and volume definitions

Probably closes #880
References #877

--- a/docker/all-in-one/.env.example
+++ b/docker/all-in-one/.env.example
@@ -23,6 +23,8 @@ APP_DISABLE_REGISTRATION=false
 APP_SAAS_MODE_ENABLED=false
 APP_SAAS_STRIPE_APPLICATION_FEE_PERCENT=0
 APP_SAAS_STRIPE_APPLICATION_FEE_FIXED=0
+APP_EMAIL_LOGO_URL=
+APP_EMAIL_LOGO_LINK_URL=
 
 # Email settings (Using log mailer for local testing)
 MAIL_MAILER=log
@@ -40,6 +42,9 @@ FILESYSTEM_PUBLIC_DISK=public
 FILESYSTEM_PRIVATE_DISK=local
 
 # Database settings
+POSTGRES_DB=hi-events
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=secret
 DATABASE_URL=postgresql://postgres:secret@postgres:5432/hi-events
 
 # Stripe settings (Replace with valid test keys if necessary)
