feat(auth): implement OIDC authentication flow with redirect and callback actions
- Added OidcCallbackAction to handle OIDC callback and user authentication.
- Introduced OidcRedirectAction to initiate OIDC login and manage state.
- Updated CreateOrderActionPublic to associate orders with authenticated users.
- Enhanced UpdateEventSettingsRequest to include require_auth_for_checkout field.
- Modified Order model to establish relationship with User model.
- Created UserProvider model to manage user-provider associations.
- Updated EventSettingsResource and EventSettingsResourcePublic to expose require_auth_for_checkout.
- Implemented OidcProviderService for OIDC provider interactions and token validation.
- Developed OidcUserService for user management during OIDC authentication.
- Added OIDC configuration file and migration for database schema changes.
- Updated API routes to include OIDC authentication endpoints.
- Enhanced frontend to support OIDC login flow and handle authentication errors.
- Created utility functions for managing OIDC login and state.

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,6 +12,7 @@
         "brick/money": "^0.10.1",
         "doctrine/dbal": "^3.6",
         "ezyang/htmlpurifier": "^4.17",
+        "firebase/php-jwt": "*",
         "guzzlehttp/guzzle": "^7.2",
         "lab404/laravel-impersonate": "^1.7",
         "laravel/framework": "^12.0",
