--- a/docker/all-in-one/.env
+++ b/docker/all-in-one/.env
@@ -1,13 +1,13 @@
 # See the README.md file for information on how to generate the JWT_SECRET and APP_KEY
-APP_KEY=
-JWT_SECRET=
+APP_KEY=base64:0SyhfW+JvObBLhLY9bGvboyRM58u+lUnzUHT3Qo6BxI=
+JWT_SECRET=xyZIfsoPNar+FaVO+bo5gtzvTuUG7db1AvK98uKBwI4=
 
 # Frontend variables (Always prefixed with VITE_)
 VITE_FRONTEND_URL=http://localhost:8123
 VITE_API_URL_CLIENT=http://localhost:8123/api
 VITE_API_URL_SERVER=http://localhost:80/api
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_123456789
-VITE_APP_NAME=Hi.Events
+VITE_APP_NAME=Eventos Mensa Brasil
 
 # Backend variables
 # These values may not be suitable for production environments.
@@ -23,6 +23,13 @@ APP_DISABLE_REGISTRATION=false
 APP_SAAS_MODE_ENABLED=false
 APP_SAAS_STRIPE_APPLICATION_FEE_PERCENT=0
 APP_SAAS_STRIPE_APPLICATION_FEE_FIXED=0
+OIDC_ENABLED=false
+OIDC_ISSUER=https://auth.example.com/application/o/hi-events/
+OIDC_CLIENT_ID=
+OIDC_CLIENT_SECRET=
+OIDC_REDIRECT_URI=http://localhost/api/auth/oidc/callback
+OIDC_SCOPES="openid email profile"
+OIDC_LOGOUT_REDIRECT_URI=http://localhost:8123
 
 # Email settings (Using log mailer for local testing)
 MAIL_MAILER=log
