Pin postgres version 17 to fix startup error with posgres >=18
Postgres >=18 changed the volume mount and will no longer start with this configuration.

See: https://github.com/docker-library/postgres/pull/1259

--- a/docker/all-in-one/docker-compose.yml
+++ b/docker/all-in-one/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       - redisdata:/data
 
   postgres:
-    image: postgres:latest
+    image: postgres:17
     container_name: postgres
     networks:
       - hi-events-network
