--- a/backend/composer.json
+++ b/backend/composer.json
@@ -27,7 +27,8 @@
         "spatie/icalendar-generator": "^3.0",
         "spatie/laravel-data": "^4.15",
         "spatie/laravel-webhook-server": "^3.8",
-        "stripe/stripe-php": "^17.0"
+        "stripe/stripe-php": "^17.0",
+        "ext-xmlwriter": "*"
     },
     "require-dev": {
         "druc/laravel-langscanner": "dev-l12-compatibility",
