--- a/backend/composer.json
+++ b/backend/composer.json
@@ -30,6 +30,9 @@
         "stripe/stripe-php": "^17.0",
         "ext-xmlwriter": "*"
     },
+    "suggest": {
+        "ext-imagick": "Required for image dimension extraction and LQIP generation"
+    },
     "require-dev": {
         "druc/laravel-langscanner": "dev-l12-compatibility",
         "fakerphp/faker": "^1.9.1",
