--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -12,7 +12,7 @@ COPY --chown=www-data:www-data . /var/www/html
 
 # Switch to root user to install PHP extensions
 USER root
-RUN install-php-extensions intl
+RUN install-php-extensions intl imagick
 USER www-data
 
 RUN chmod -R 755 /var/www/html/storage \
