Feature: Use Docker for Vapor deployments

--- a/backend/vapor.yml
+++ b/backend/vapor.yml
@@ -7,7 +7,7 @@ environments:
     memory: 2048
     cli-memory: 512
     storage: hievents-assets-prod
-    runtime: 'php-8.3:al2'
+    runtime: docker
     warm: 3
     cache: hievents-redis
     database: hievents-postgres
@@ -27,7 +27,7 @@ environments:
     domain: staging-api.hi.events
     memory: 1024
     cli-memory: 512
-    runtime: 'php-8.3:al2'
+    runtime: docker
     warm: 3
     cache: hievents-redis
     database: hievents-postgres
