Feature: Add mail failover

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "ext-intl": "*",
+        "ext-xmlwriter": "*",
         "barryvdh/laravel-dompdf": "^3.0",
         "brick/money": "^0.10.1",
         "doctrine/dbal": "^3.6",
@@ -28,7 +29,8 @@
         "spatie/laravel-data": "^4.15",
         "spatie/laravel-webhook-server": "^3.8",
         "stripe/stripe-php": "^17.0",
-        "ext-xmlwriter": "*"
+        "symfony/http-client": "^7.4",
+        "symfony/postmark-mailer": "^7.4"
     },
     "suggest": {
         "ext-imagick": "Required for image dimension extraction and LQIP generation"
